# classifier-service

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile.followup  Dockerfile.predict  Makefile  README.md  authorizer.py  followup.py  license-ignore.txt  package-lock.json  package.json  predict.py  pyproject.toml  requirements-followup.txt  requirements-predict.txt  requirements.txt  serverless.yml  status.py  train.py  trainingdata.py  trainjob.py
__events__/: followups-event.json.dist  predict-event.json.dist  status-event.json.dist  train-event.json.dist  trainingdata-event.json.dist  trainjob-event.json.dist
benchmark/: cf-questions-k6.js  cf-questions.json
cicd/: buildspec.yml  deployspec-dev.yml  deployspec-prod.yml  deployspec-qa.yml  deployspec_prod.yml  deployspec_staging.yml
infrastructure/: .terraform.lock.hcl  cicd  cicd.tf  main.tf  tfplan.out
module/: __init__.py  api.py  dao.py  followup-api.py  followup_api.py  logger.py  mentor.py  ner.py  spacy_preprocessor.py  ttl_cache.py  types.py  utils.py
module/arch/lr/: __init__.py  predict.py  train.py
module/arch/lr_transformer/: __init__.py  embeddings.py  predict.py  train.py
module/classifier/: __init__.py  constants.py  dao.py  ner.py  predict.py  sentence_transformer.py  spacy_model.py  spacy_preprocessor.py  speechact.py  stopwords.py
shared/: pop_culture.csv  transformer.pkl
shared/sentence-transformer/distilbert-base-nli-mean-tokens/: config.json  modules.json  similarity_evaluation_results.csv
tests/: conftest.py  helpers.py  test_dao.py  test_fetch_training_data.py  test_followup_generation.py  test_mentor.py  test_predict.py  test_train.py  test_train_and_predict.py
tests/fixtures/: __init__.py
tests/fixtures/graphql/: clint.json  (+2 more)
(+39 files in other folders)
