[tool.poetry]
name = "mentor_classifier_service"
version = "1.0.0"
description = "train and run inference for mentor pal"
authors = []

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "^1.20.3"
pylru = "^1.2.0"
requests = "^2.25.1"
scikit-learn = "0.24.2"
# poetry.lock was manually modified to remove torch as a dependency for sentence-transformers!
sentence-transformers = "^2.0.0"
spacy = "^3.5.0"
boto3 = "^1.20.53"
sentry-sdk = "^1.5.4"

[tool.poetry.dev-dependencies]
coverage = "^7.1.0"
freezegun = "^1.1.0"
pip-upgrader = "^1.4.15"
pytest = "^7.2.1"
pytest-mock = "^3.6.1"
pytest-env = "^0.8.1"
pytest-flask = "^1.2.0"
pytest-only = "^2.0.0"
responses = "^0.22.0"
tqdm = "4.64.1"
flake8 = "^6.0.0"
black = "^22.3.0"
torch = "1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
